--- a/app/views/addingvalue/current/environmental-impact.html
+++ b/app/views/addingvalue/current/environmental-impact.html
@@ -38,10 +38,18 @@ How will the project improve the environment?
 
                   items: [
                 {
-                  value: "Energy efficiency",
+                  value: "Renewable energy",
                   text: "Renewable energy",
                   hint:{
                     text:'For example, majority of energy for the project is generated on site'
+                  },
+                  checked: checked("environmental-impact", "Renewable energy")
+                },
+                {
+                  value: "Energy efficiency",
+                  text: "Energy efficiency",
+                  hint:{
+                    text: 'For example, using variable speed motors or heat exchangers'
                   },
                   checked: checked("environmental-impact", "Energy efficiency")
                 },
