--- a/app/views/addingvalue/current/answers.html
+++ b/app/views/addingvalue/current/answers.html
@@ -134,23 +134,6 @@
         </tr>
 
         <tr class="govuk-table__row">
-          <th scope="row" class="govuk-table__header">Current customers
-          <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
-            {% for item in data['current-customers'] %}
-            <li>{{ item | capitalize }}</li>
-            {% endfor %}
-          </ul>
-        </th>
-          <td class="govuk-table__cell">Strong</td>
-          <td class="govuk-table__cell">
-            <p class="govuk-body govuk-!-font-size-16">
-              Improve processing and supply chains<br><br>
-            Grow your business</p>
-          </td>
-          <td class="govuk-table__cell"><a href="current-customers">Change</td>
-        </tr>
-
-        <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header">Future customers
           <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet govuk-!-margin-right-9">
             {% for item in data['future-customers'] %}
@@ -212,7 +195,7 @@
           <td class="govuk-table__cell">Strong</td>
           <td class="govuk-table__cell">
             <p class="govuk-body govuk-!-font-size-16">
-              Improve teh environment</p>
+              Improve the environment</p>
           </td>
           <td class="govuk-table__cell"><a href="environmental-impact">Change</td>
         </tr>
