--- a/app/views/addingvalue/current/business-type.html
+++ b/app/views/addingvalue/current/business-type.html
@@ -54,7 +54,7 @@ What is your business?
                 },
                 {
                   value: "100% business owned",
-                  text: "A processing business owned by a primary producer",
+                  text: "A separate processing business owned by a primary producer",
                   hint: {
                   text: "For example, cheese processing business owned by a dairy farmer"
                   },
