--- a/app/views/addingvalue/current/collaboration.html
+++ b/app/views/addingvalue/current/collaboration.html
@@ -28,7 +28,7 @@ Will you buy materials from other farmers?
                   name: 'collaboration',
                   fieldset: {
                       legend: {
-                          text: 'Will you work in partnership or collaborate with other famers or producers?',
+                          text: 'Will you work in partnership or collaborate with other farmers or producers?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
