--- a/app/views/addingvalue/current/guidance.html
+++ b/app/views/addingvalue/current/guidance.html
@@ -30,9 +30,9 @@
       <li>controlled atmosphere or dynamic controlled atmosphere storage</li>
       <li>constructing or improving buildings (for example, a new building for cheese making)</li>
       <li>specialist vehicles (for example, forklifts or refrigerated lorries)</li>
-      <li>retail facilities (for example, a farm shop)</li>
+      <li>retail facilities (for example, a farm shop or vending machine)</li>
     </ul>
-<p>Basic storage such as grain or vegetables is not eligible as it does not add value to products.</p>
+<p>Basic storage for grain or vegetables is not eligible as it does not add value to products.</p>
 <p>The minimum grant you can claim is £35,000 (40% of £87,500). The maximum grant is £500,000.</p>
 <h2 id="when-to-apply">When to apply</h2>
 <table class="govuk-table govuk-body">
