--- a/app/views/addingvalue/current/tenancy.html
+++ b/app/views/addingvalue/current/tenancy.html
@@ -74,7 +74,7 @@
           <h2 class="app-step-nav-related__heading">
             <span class="app-step-nav-related__pretitle">Eligibility</span>
             </h2>
-            <p>The land must be owned or have a tenancy in place until 2027 before starting the project.</p>
+            <p>You must own the land or have a tenancy in place until 2027 before starting the project.</p>
             <a href="#">
             </a>
 
