AV fixes and kit updates

--- a/app/views/addingvalue/current/products-processed.html
+++ b/app/views/addingvalue/current/products-processed.html
@@ -117,7 +117,7 @@ What type of products are being processed?
           </h2>
           <p class="govuk-body">RPA wants to fund projects that:</p>
           <ul class="govuk-list govuk-list--bullet">
-          <li>improve processing and supply chains</li>
+          <li>create and expand processing capacity to provide more English-grown food for consumers to buy</li>
 
           </ul>
 
