--- a/app/views/addingvalue/current/project-items.html
+++ b/app/views/addingvalue/current/project-items.html
@@ -88,7 +88,7 @@
               Retail facilities
             </label>
             <div id="Retail-facilities-hint" class="govuk-hint govuk-radios__hint">
-                  For example, farm shop or vending machine
+                  For example, farm shops
                 </div>
           </div>
 </div>
