--- a/app/views/addingvalue/current/guidance.html
+++ b/app/views/addingvalue/current/guidance.html
@@ -30,7 +30,7 @@
       <li>controlled atmosphere or dynamic controlled atmosphere storage</li>
       <li>constructing or improving buildings (for example, a new building for cheese making)</li>
       <li>specialist vehicles (for example, forklifts or refrigerated lorries)</li>
-      <li>retail facilities (for example, a farm shop or vending machine)</li>
+      <li>retail facilities (for example, farm shops)</li>
     </ul>
 <p>Basic storage for grain or vegetables is not eligible as it does not add value to products.</p>
 <p>The minimum grant you can claim is £35,000 (40% of £87,500). The maximum grant is £500,000.</p>
