--- a/app/views/robotics/current/other-robotic-equipment.html
+++ b/app/views/robotics/current/other-robotic-equipment.html
@@ -32,9 +32,10 @@
         All items must:
         <p>
           <ul class="govuk-list govuk-list--bullet govuk-hint">
-            <li>have a sensing system</li>
-            <li>have a decision-making capability</li>
-            <li>use actuators (the devices that move robot joints)</li>
+            <li>have a sensing system and can understand their environment</li>
+            <li>make decisions and plan</li>
+            <li>have control actuators (the devices that move robot joints)</li>
+            <li>work in a continuous loop</li>
           </ul>
         </p>
        </div>
@@ -79,9 +80,10 @@
       <p>RPA will consider items that: </p>
       <ul class="govuk-list govuk-list--bullet">
 
-        <li>have a sensing system</li>
-        <li>have a decision-making capability</li>
-        <li>use actuators (the devices that move robot joints)</li>
+        <li>have a sensing system and can understand their environment</li>
+        <li>make decisions and plan</li>
+        <li>have control actuators (the devices that move robot joints)</li>
+        <li>work in a continuous loop</li>
       </ul>
 
   </div>
