--- a/app/views/robotics/current/project-items.html
+++ b/app/views/robotics/current/project-items.html
@@ -57,7 +57,7 @@
           Wavelength-specific LED lighting for horticultural crops
         </label>
         <div id="wavelength-specific-LED-lighting-hint" class="govuk-hint govuk-radios__hint">
-              Wavelength-specific LED lighting to aid plant growth
+              Wavelength-specific LED lighting to aid plant growth only
             </div>
             </div>
 
