--- a/app/views/robotics/current/other-robotic-fail.html
+++ b/app/views/robotics/current/other-robotic-fail.html
@@ -28,9 +28,10 @@
 
       <p class="govuk-body">RPA will only fund items that: <p>
       <ul class="govuk-list govuk-list--bullet">
-          <li>have a sensing system</li>
-          <li>have a decision-making capability</li>
-          <li>use actuators</li>
+          <li>have a sensing system and can understand their environment</li>
+          <li>make decisions and plan</li>
+          <li>have control actuators (the devices that move robot joints)</li>
+          <li>work in a continuous loop</li>
           </ul>
       <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-link--no-visited-state govuk-!-font-size-19">
          See other grants you may be eligible for.
