--- a/app/views/robotics/current/project-items2.html
+++ b/app/views/robotics/current/project-items2.html
@@ -33,13 +33,13 @@
     <fieldset class="govuk-fieldset" aria-describedby="associated-works-hint">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
         <h1 class="govuk-fieldset__heading">
-          Which items does your project need?
+          Which robotic items does your project need?
         </h1>
       </legend>
       <div id="project-items-hint" class="govuk-hint">
     </div>
 
-<p class="govuk-hint">Robotic equipment is autonomous farming equipment capable of sensing its environment, making decisions and performing actions<br><br>Select all the items your project needs</p>
+<p class="govuk-hint">Farming equipment capable of sensing and understanding its environment, making decisions, and planning and controlling its actions in a continuous loop. <br><br>Select all the items your project needs</p>
 
 
       <div class="govuk-checkboxes">
@@ -55,21 +55,21 @@
             <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" id="robotic-equipment-3" name="robotic-equipment" type="checkbox" value="Robotic weeding equipment" {{ checked("robotic-equipment", "Robotic weeding equipment") }}>
               <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-3">
-                Robotic weeding equipment
+                 Robotic or autonomous weeding equipment
               </label>
             </div>
             <div class="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="robotic-equipment-5" name="robotic-equipment" type="checkbox" value="Robotic spraying equipment" {{ checked("robotic-equipment", "Robotic spraying equipment") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-5">
-                  Robotic spraying equipment
+                  Robotic or autonomous spraying equipment
                 </label>
               </div>
               <div class="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
                   <input class="govuk-checkboxes__input" id="robotic-equipment-9" name="robotic-equipment" type="checkbox" value="Robotic tractor" {{ checked("robotic-equipment", "Robotic tractor") }}>
                   <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-9">
-                    Autonomous driverless tractor
+                    Robotic or autonomous driverless tractor or platform
                   </label>
                 </div>
             <div class="govuk-checkboxes">
@@ -83,21 +83,21 @@
                 <div class="govuk-checkboxes__item">
                   <input class="govuk-checkboxes__input" id="robotic-equipment-7" name="robotic-equipment" type="checkbox" value="Robotic feeding systems" {{ checked("robotic-equipment", "Robotic feeding systems") }}>
                   <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-7">
-                    Robotic feeding system
+                    Robotic or autonomous feeding system
                   </label>
                 </div>
                 <div class="govuk-checkboxes">
                   <div class="govuk-checkboxes__item">
                     <input class="govuk-checkboxes__input" id="robotic-equipment-6" name="robotic-equipment" type="checkbox" value="Robotic transplanting" {{ checked("robotic-equipment", "Robotic transplanting") }}>
                     <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-6">
-                      Robotic transplanting
+                      Robotic or autonomous transplanting
                     </label>
                   </div>
                   <div class="govuk-checkboxes">
                           <div class="govuk-checkboxes__item">
                             <input class="govuk-checkboxes__input" id="robotic-equipment-10" name="robotic-equipment" type="checkbox" value="Other robotic equipment" {{ checked("robotic-equipment", "Other robotic equipment") }}>
                             <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-10">
-                              Other robotic equipment
+                              Other autonomous robotic technology
                             </label>
                           </div>
                         </fieldset>
