--- a/app/views/robotics/index.html
+++ b/app/views/robotics/index.html
@@ -33,8 +33,8 @@
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Design history</h2>
         <p class='govuk-heading-m'>Version 4 (current)</p>
-          <p class='govuk-list app-list--definition'>The version shown in this prototype is currently in testing for 'new' contractor changes and new 'guidance/start page' changes.<br>
-            <span class="govuk-body govuk-!-font-size-14"># Last updated on 19 October 2021<br/>
+          <p class='govuk-list app-list--definition'>The version shown in this prototype is currently in testing for 'new' contractor changes (including journey modifications like 'Who are you' question page).<br>
+            <span class="govuk-body govuk-!-font-size-14"># Last updated on 22 November 2021<br/>
             </span></p>
 
 
