--- a/app/views/robotics/current/other-robotic-equipment.html
+++ b/app/views/robotics/current/other-robotic-equipment.html
@@ -34,7 +34,7 @@
           <ul class="govuk-list govuk-list--bullet govuk-hint">
             <li>have a sensing system and can understand their environment</li>
             <li>make decisions and plan</li>
-            <li>have control actuators (the devices that move robot joints)</li>
+            <li>can control its actuators (the devices that move robot joints)</li>
             <li>work in a continuous loop</li>
           </ul>
         </p>
@@ -82,7 +82,7 @@
 
         <li>have a sensing system and can understand their environment</li>
         <li>make decisions and plan</li>
-        <li>have control actuators (the devices that move robot joints)</li>
+        <li>can control its actuators (the devices that move robot joints)</li>
         <li>work in a continuous loop</li>
       </ul>
 
