--- a/app/views/robotics/current/other-robotic-fail.html
+++ b/app/views/robotics/current/other-robotic-fail.html
@@ -30,7 +30,7 @@
       <ul class="govuk-list govuk-list--bullet">
           <li>have a sensing system and can understand their environment</li>
           <li>make decisions and plan</li>
-          <li>have control actuators (the devices that move robot joints)</li>
+          <li>can control its actuators (the devices that move robot joints)</li>
           <li>work in a continuous loop</li>
           </ul>
       <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-link--no-visited-state govuk-!-font-size-19">
