--- a/app/views/robotics/current/other-robotic-equipment.html
+++ b/app/views/robotics/current/other-robotic-equipment.html
@@ -25,7 +25,7 @@
      <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
          <h1 class="govuk-fieldset__heading">
-           Does your other robotic equipment fit the eligibility criteria?
+           Does your other robotic technology fit the eligibility criteria?
          </h1>
        </legend>
        <div id="other-robotic-hint" class="govuk-hint">
