--- a/app/views/robotics/current/project-cost.html
+++ b/app/views/robotics/current/project-cost.html
@@ -51,7 +51,7 @@
           <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
           <strong class="govuk-warning-text__text">
             <span class="govuk-warning-text__assistive">Warning</span>
-            RPA will assess your other robotic equipment and whether they can fund it. There’s no guarantee your item will be funded.
+            RPA will assess your other robotic technology and whether they can fund it. There’s no guarantee your item will be funded.
           </strong>
         </div>
         {% endif %}
@@ -94,7 +94,7 @@
         <nav role="navigation" aria-labelledby="subsection-title">
           <ul class="govuk-list govuk-!-font-size-16 govuk-list--bullet">
             <li>
-            Other robotic equipment
+            Other autonomous robotic technology
             </li>
         {% endif %}
           </ul>
