guidance and start page changes

--- a/app/views/slurry/current/guidance.html
+++ b/app/views/slurry/current/guidance.html
@@ -13,8 +13,8 @@
 
 <p>You can apply if you:</p>
 <ul>
-  <li>are a farmer or agricultural contractor whose business is registered in England </li>
-  <li>will do the grant-funded work in England </li>
+  <li>you are a farmer or agricultural contractor </li>
+  <li>your business is registered in England or you will do the grant-funded work in England</li>
   <li>estimate the project costs are over £87,500 </li>
 </ul>
 <p class="govuk-body">Agricultural contractors can only use the grant for buying robotics and innovation equipment.</p>
