--- a/app/views/slurry/current/start.html
+++ b/app/views/slurry/current/start.html
@@ -39,8 +39,8 @@
           <h2 class="govuk-heading-m">Who can apply</h2>
           <p>You can apply if you:</p>
           <ul class="govuk-list govuk-list--bullet">
-            <li>are a farmer or agricultural contractor whose business is registered in England </li>
-            <li>will do the grant-funded work in England </li>
+            <li>you are a farmer or agricultural contractor</li>
+            <li>your business is registered in England or you will do the grant-funded work in England</li>
             <li>estimate the project costs are over £87,500 </li>
           </ul>
           <p class="govuk-body">Agricultural contractors can only use the grant for buying robotics and innovation equipment.</p>
