Index file updated re history

--- a/app/views/addingvalue/index.html
+++ b/app/views/addingvalue/index.html
@@ -33,11 +33,16 @@
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Design history</h2>
                             <p class='govuk-list app-list--definition'>
-                              <a href='addingvalue/current/guidance' class="govuk-link--no-visited-state"><strong>Version 3 (current)</a></strong><br>
-                              <p class='govuk-list app-list--definition'>This is the version after the third round of iterations, testing with users between 18 and 19 November 2021.<br>  <a href='https://eaflood.atlassian.net/wiki/spaces/FG/pages/3630694446/Adding+Value+Design+Content+Changes+Actions' target="new" class="govuk-link--no-visited-state">Includes issues 32 to 42 from Confluence</a>.<br>
-                                <span class="govuk-body govuk-!-font-size-14"># Last updated on 17 November 2021<br/>
+                              <a href='addingvalue/current/guidance' class="govuk-link--no-visited-state"><strong>Version 4 (current)</a></strong><br>
+                              <p class='govuk-list app-list--definition'>This is the version where we removed 'Products coming from' and 'Products to be sold' screens from the flow.<br>
+                                <span class="govuk-body govuk-!-font-size-14"># Last updated on 14 March 2022<br/>
                                 </span></p>
                                 <p class='govuk-heading-m'>Previous versions</p>
+                                <p class='govuk-list app-list--definition'>
+                                  <a href='addingvalue/v3/guidance' class="govuk-link--no-visited-state"><strong>Version 3</a></strong><br>
+                                  <p class='govuk-list app-list--definition'>This is the version after the third round of iterations, testing with users between 18 and 19 November 2021.<br>  <a href='https://eaflood.atlassian.net/wiki/spaces/FG/pages/3630694446/Adding+Value+Design+Content+Changes+Actions' target="new" class="govuk-link--no-visited-state">Includes issues 32 to 42 from Confluence</a>.<br>
+                                    <span class="govuk-body govuk-!-font-size-14"># Last updated on 17 November 2021<br/>
+                                    </span></p>
                                 <p class='govuk-list app-list--definition'>
                                   <a href='/addingvalue/v2/guidance' class="govuk-link--no-visited-state"><strong>Version 2</a></strong><br>
                                     This is the version after the second round of iterations, which was tested with users between 4 and 17 November 2021.<br> <a href='https://eaflood.atlassian.net/wiki/spaces/FG/pages/3630694446/Adding+Value+Design+Content+Changes+Actions' target="new" class="govuk-link--no-visited-state">Includes issues 19 to 31 from Confluence</a>.</p>
